--- a/pom.xml
+++ b/pom.xml
@@ -4,27 +4,15 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.nesscomputing</groupId>
-    <artifactId>ness-oss-parent</artifactId>
-    <version>32</version>
+    <artifactId>ness-root</artifactId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
-
-  <scm>
-    <connection>scm:git:git://github.com/NessComputing/components-ness-config.git</connection>
-    <developerConnection>scm:git:git@github.com:NessComputing/components-ness-config.git</developerConnection>
-    <url>http://github.com/NessComputing/components-ness-config</url>
-    <tag>HEAD</tag>
-  </scm>
 
   <groupId>com.nesscomputing.components</groupId>
   <artifactId>ness-config</artifactId>
   <name>ness-config</name>
-  <version>2.3.2-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>Ness Configuration component.</description>
-
-  <properties>
-    <dep.jetty.version>8.1.3.v20120416</dep.jetty.version>
-  </properties>
 
   <dependencies>
     <dependency>
@@ -35,7 +23,6 @@
     <dependency>
       <groupId>com.nesscomputing.components</groupId>
       <artifactId>ness-tinyhttp</artifactId>
-      <version>1.2.1</version>
     </dependency>
 
     <dependency>
@@ -62,10 +49,10 @@
       <groupId>org.skife.config</groupId>
       <artifactId>config-magic</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
+      <artifactId>annotations</artifactId>
     </dependency>
 
     <dependency>
@@ -82,7 +69,6 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpcore</artifactId>
-      <version>4.1.4</version>
     </dependency>
 
     <dependency>
@@ -106,20 +92,12 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
-      <version>${dep.jetty.version}</version>
       <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.eclipse.jetty.orbit</groupId>
-          <artifactId>javax.servlet</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
     <dependency>
       <groupId>org.weakref</groupId>
       <artifactId>jmxutils</artifactId>
-      <version>1.12</version>
       <scope>test</scope>
     </dependency>
 
@@ -132,21 +110,18 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-http</artifactId>
-      <version>${dep.jetty.version}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-security</artifactId>
-      <version>${dep.jetty.version}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-util</artifactId>
-      <version>${dep.jetty.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
